--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "git add . | git commit -m 'deploy' | git push"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
